--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>register</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <div class="form-container">
-        <h2>Register</h2>
-        <form action="index.php" method="post">
-            <label>Username:</label>
-            <input type="text" name="username" required>
-
-            <label>Password:</label>
-            <input type="password" name="password" required>
-
-            <label>Email:</label>
-            <input type="email" name="email" required>
-
-            <input type="submit" value="Submit">
-        </form>
+    <div class="register">
+        <div class="forms">
+            <h2>Register</h2>
+            <form action="">
+                <label for="">Username</label>
+                <input type="text" name="Username" required>
+                <label for="">password</label>
+                <input type="password" name="password" required>
+                <label for="">email</label>
+                <input type="email" name="email" required>
+                <input type="submit" value="submit">
+            </form>
+        </div>
     </div>
 </body>
 </html>
