--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="register">
         <div class="forms">
             <h2>Register</h2>
-            <form action="">
+            <form action="profile.php" method="post">
                 <label for="">Username</label>
                 <input type="text" name="Username" required>
                 <label for="">password</label>
